# study-cpp

./: .gitignore  CMakeLists.txt
include/connection/: client.h  connection.h
include/contracts/: contracts.h
include/contracts/responses/: responses.h
include/credential/: credential.h
include/encryption/: encrypted_stream_processor.h  encryption.h  options.h  plain_stream_processor.h
include/keymanager/: key_manager_client.h
include/keymanager/factories/: aes_gcm_factory.h  rsa_ssa_pkcs1_sha_factory.h  xchacha20_poly1305_factory.h
include/keymanager/key/: aes_gcm.h  xchacha20_poly1305.h
include/keymanager/operations/: aes128_gcm_operation.h  aes256_gcm_operation.h  rsa_ssa_pkcs1_sha_operation.h  xchacha20_poly1305_operation.h
include/keymanager/primitives/: aes_gcm_aead.h  rsa_ssa_pkcs1_sha.h  xchacha20_poly1305_aead.h
include/keymanager/services/: cprng_service.h  id_service.h
include/keymanager/types/: algorithm.h  types.h
include/requests/: requests.h
include/utils/: hasher.h
onqlave/: CMakeLists.txt
onqlave/source/: main.cpp
source/onqlave/connection/: client.cpp  connection.cpp
source/onqlave/contracts/requests/: requests.cpp
source/onqlave/encryption/: encryption.cpp  options.cpp
source/onqlave/keymanager/: key_manager_client.cpp
source/onqlave/keymanager/factories/: aes_gcm_factory.cpp  rsa_ssa_pkcs1_sha_factory.cpp  xchacha20_poly1305_factory.cpp
source/onqlave/keymanager/keys/: aes_gcm.cpp  xchacha20_poly1305.cpp
source/onqlave/requests/: requests.cpp
source/onqlave/utils/: hasher.cpp
(+10 files in other folders)
